Added antd and a login screen along with driver details screen

--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@apollo/client": "^3.3.21",
+    "@apollo/react-hooks": "^4.0.0",
+    "@graphql-codegen/cli": "1.21.6",
+    "@graphql-codegen/typescript": "1.22.4",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
+    "@graphql-codegen/typescript-operations": "1.18.3",
+    "@graphql-codegen/typescript-react-apollo": "2.3.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,14 +20,29 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.16.6",
+    "antd-mobile": "^2.3.4",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
+    "formik-antd": "^2.0.1",
+    "graphql": "^15.5.1",
+    "rc-form": "^2.4.12",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "generate": "graphql-codegen --config codegen.yml",
+    "start": "set -o allexport; source .env; set +o allexport && yarn generate && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
