--- a/package.json
+++ b/package.json
@@ -20,21 +20,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "antd": "^4.16.6",
+    "antd": "^4.16.8",
     "antd-mobile": "^2.3.4",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
-    "formik-antd": "^2.0.1",
     "graphql": "^15.5.1",
-    "rc-form": "^2.4.12",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
+    "react-app-rewired": "^2.1.8",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.10.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "recoil": "^0.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
@@ -42,10 +41,10 @@
   },
   "scripts": {
     "generate": "graphql-codegen --config codegen.yml",
-    "start": "set -o allexport; source .env; set +o allexport && yarn generate && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set -o allexport; source .env; set +o allexport && yarn generate && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -64,5 +63,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0"
   }
 }
