--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "license-web",
   "version": "0.1.0",
   "private": true,
+  "description": "A progressive web app for routine traffic stops",
+  "author": {
+    "email": "mzam.siya@gmail.com",
+    "name": "siya"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.21",
@@ -27,6 +32,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-app-rewired": "^2.1.8",
